# Self-learning-personal-knowledge-graph-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  start_backend.py  test_core_functionality.py  test_phase3_functionality.py
.windsurf/workflows/: review.md
Project_description/: design.md  prd.md  tech-stack.md
docs/: api.md  development.md
frontend/: Dockerfile  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: GraphVisualization.tsx  QueryInterface.tsx
src/rexi/: __init__.py
src/rexi/agents/: __init__.py  advanced_reasoning.py  entity_extractor.py  entity_resolver.py  memory_evolution.py  relation_extractor.py  self_learning.py  semantic_role_labeler.py  temporal_reasoning.py
src/rexi/api/: __init__.py  main.py
src/rexi/config/: __init__.py  settings.py
src/rexi/core/: __init__.py  hybrid_retrieval.py  ingestion.py  knowledge_graph.py  memory_evolution.py  reasoning.py
src/rexi/services/: __init__.py  custom_llm_service.py  embedding_service.py  llm_service.py  neo4j_service.py  performance_optimizer.py  qdrant_service.py  websocket_service.py
src/rexi/utils/: __init__.py  file_processing.py  logger.py  text_processing.py
tests/: test_core.py  test_services.py
